--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,13 @@
 Source: libtext-wrapi18n-perl
 Section: perl
 Priority: required
-Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Anibal Monsalve Salazar <anibal@debian.org>
 Build-Depends: debhelper (>= 7), quilt
 Build-Depends-Indep: perl (>= 5.8.0)
 Standards-Version: 3.8.1
 Homepage: http://search.cpan.org/search?module=Text::WrapI18N
+XS-Pexip-Upstream: http://archive.ubuntu.com/ubuntu/ precise
 
 Package: libtext-wrapi18n-perl
 Architecture: all
