--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 7), quilt
 Build-Depends-Indep: perl (>= 5.8.0)
 Standards-Version: 3.8.1
 Homepage: http://search.cpan.org/search?module=Text::WrapI18N
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ buster
 
 Package: libtext-wrapi18n-perl
 Architecture: all
