--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Standards-Version: 4.4.0
 Vcs-Browser: https://salsa.debian.org/perl-team/modules/packages/libtext-wrapi18n-perl
 Vcs-Git: https://salsa.debian.org/perl-team/modules/packages/libtext-wrapi18n-perl.git
 Homepage: https://metacpan.org/release/Text-WrapI18N
-XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: libtext-wrapi18n-perl
 Architecture: all
